# fulcra-api-python

./: .gitignore  404.html  AGENTS.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  shell.nix
.github/: CODEOWNERS
docs/: fulcraapi.md  index.md
examples/auth_code_flow_app/: app.py
fulcra_api/: __init__.py  cli.py  core.py  credentials.py  oidc.py
fulcra_api/cli/: __init__.py  auth.py  commands.py  data_types.py  files.py  record.py  share.py  tags.py  utils.py
fulcraapi/: index.html
search/: search_index.json
tests/: test_auth_code_flow.py  test_basic.py  test_file_upload.py
