[project]
name = "fulcra-api"
version = "0.1.30"
description = "Python client library for Context by Fulcra"
authors = [{ name = "Brandon Creighton", email = "brandon@fulcradynamics.com" }]
requires-python = ">= 3.11"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pandas> 1.5, < 3",
    "pyarrow>= 19.0.0",
    "numpy>=2.0.0,<3",
    "pytest>=7.4.2,<8",
    "click>=8.2.1",
    "dateparser>=1.4.0",
]
packages = [{ include = "fulcra_api" }]

[project.scripts]
fulcra = "fulcra_api.cli:cli"
fulcra-api = "fulcra_api.cli:cli"

[dependency-groups]
docs = [
    "mkdocs>=1.5.3,<2",
    "sphinx>=7.2.6,<8",
    "mkdocstrings[python]>=0.29.0,<0.30",
    "mkdocs-material>=9.4.5,<10",
]
test = ["pytest>=7.4.2,<8"]
dev = ["black>=23.9.1,<24"]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
